k8s/deploy1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotstar-deployment
  labels:
    app: hotstar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hotstar
  template:
    metadata:
      labels:
        app: hotstar
    spec:
      containers:
      - name: hotstar
        image: ankitanallamilli/hotstar-webapp:IMAGE_TAG
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hotstarwebapp-service
spec:
  selector:
    app: hotstar
  ports:
  - protocol: TCP
    port: 80       
    targetPort: 8080
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotstarwebapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hotstarwebapp-service
            port:
              number: 80
      - path: /janaa
        pathType: Prefix
        backend:
          service:
            name: hotstarwebapp-service
            port:
              number: 80
