k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotstarwebapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" 
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hotstarwebapp-service
            port:
              number: 80
      - path: /janaa
        pathType: Prefix
        backend:
          service:
            name: hotstarwebapp-service
            port:
              number: 80
